<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainbackground_light"
    tools:context=".HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/themetoggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                app:lottie_autoPlay="false"
                app:lottie_loop="false"
                app:lottie_rawRes="@raw/lightdark" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="125dp"
                    android:layout_height="250dp"
                    android:layout_marginStart="10dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/aboutmeimg"
                    android:contentDescription="@string/imgDescription" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="15dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/mainNameplate"
                        style="@style/TEXT"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="@font/nunito_bold"
                        android:text="@string/myName"
                        android:textSize="34sp" />

                    <LinearLayout
                        android:id="@+id/ll1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="5dp"
                        android:orientation="horizontal">

                        <ImageView
                            style="@style/TINT"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0"
                            android:src="@drawable/bullets"
                            android:contentDescription="@string/imgDescription" />

                        <TextView
                            style="@style/TEXT"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_weight="1"
                            android:fontFamily="@font/inter"
                            android:text="@string/bulletPoint1"
                            android:textAllCaps="true" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="5dp"
                        android:orientation="horizontal">

                        <ImageView
                            style="@style/TINT"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0"
                            android:src="@drawable/bullets"
                            android:contentDescription="@string/imgDescription" />

                        <TextView
                            style="@style/TEXT"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_weight="1"
                            android:fontFamily="@font/inter"
                            android:text="@string/bulletPoint2"
                            android:textAllCaps="true" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="5dp"
                        android:orientation="horizontal">

                        <ImageView
                            style="@style/TINT"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0"
                            android:src="@drawable/bullets"
                            android:contentDescription="@string/imgDescription" />

                        <TextView
                            style="@style/TEXT"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_weight="1"
                            android:fontFamily="@font/inter"
                            android:text="@string/bulletPoint3"
                            android:textAllCaps="true" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll4"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="5dp"
                        android:orientation="horizontal">

                        <ImageView
                            style="@style/TINT"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0"
                            android:src="@drawable/bullets"
                            android:contentDescription="@string/imgDescription" />

                        <TextView
                            style="@style/TEXT"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_weight="1"
                            android:fontFamily="@font/inter"
                            android:text="@string/bulletPoint4"
                            android:textAllCaps="true" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll5"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <ImageView
                            style="@style/TINT"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0"
                            android:src="@drawable/bullets"
                            android:contentDescription="@string/imgDescription" />

                        <TextView
                            style="@style/TEXT"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_weight="1"
                            android:fontFamily="@font/inter"
                            android:text="@string/bulletPoint5"
                            android:textAllCaps="true" />
                    </LinearLayout>

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView5"
                    style="@style/TEXT"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/nunito_bold"
                    android:text="@string/contact_info"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/imageView4"
                    style="@style/TINT"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginStart="25dp"
                    android:src="@drawable/bottomline"
                    android:contentDescription="@string/imgDescription" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/callmeCard"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="5dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10dp"
                        android:orientation="horizontal">

                        <ImageView
                            style="@style/CallMeImg"
                            android:layout_width="50dp"
                            android:layout_height="60dp"
                            android:layout_marginStart="10dp"
                            android:layout_weight="0.5"
                            android:contentDescription="@string/imgDescription" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginStart="25dp"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:orientation="vertical">

                            <TextView
                                style="@style/TEXT"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/inter_semibold"
                                android:text="@string/call_me"
                                android:textSize="16sp" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/inter"
                                android:text="@string/mobile_number"
                                android:textSize="12sp" />
                        </LinearLayout>

                        <ImageView
                            android:id="@+id/callIcon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="1"
                            android:src="@drawable/callicon"
                            android:contentDescription="@string/imgDescription" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/mailmeCard"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="5dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10dp"
                        android:orientation="horizontal">

                        <ImageView
                            style="@style/MailMeImg"
                            android:layout_width="50dp"
                            android:layout_height="60dp"
                            android:layout_marginStart="10dp"
                            android:layout_weight="0.5"
                            android:contentDescription="@string/imgDescription" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginStart="25dp"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:orientation="vertical">

                            <TextView
                                style="@style/TEXT"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/inter_semibold"
                                android:text="@string/mail_me"
                                android:textSize="16sp" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/inter"
                                android:text="@string/email_id"
                                android:textSize="12sp" />
                        </LinearLayout>

                        <ImageView
                            android:id="@+id/mailIcon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="1"
                            android:src="@drawable/mailicon"
                            android:contentDescription="@string/imgDescription" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/pingmeCard"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="10dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imageView5"
                            style="@style/PingMeImg"
                            android:layout_width="50dp"
                            android:layout_height="60dp"
                            android:layout_marginStart="10dp"
                            android:layout_weight="0.5"
                            android:contentDescription="@string/imgDescription" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginStart="25dp"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/textView6"
                                style="@style/TEXT"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/inter_semibold"
                                android:text="@string/ping_me"
                                android:textSize="16sp" />

                            <TextView
                                android:id="@+id/textView7"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/inter"
                                android:text="@string/linkedin_id"
                                android:textSize="12sp" />
                        </LinearLayout>

                        <ImageView
                            android:id="@+id/pingIcon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="1"
                            android:src="@drawable/pingicon"
                            android:contentDescription="@string/imgDescription" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- TODO: Update blank fragment layout -->


</FrameLayout>